# cookiecutter-bits-pypi

./: .pre-commit-config.yaml  .ruff.toml  .yamllint  README.md  catalog-info.yaml  cookiecutter.json  scaraplate.yaml
.github/: dependabot.yml
.github/workflows/: checks.yaml  pr-checks.yaml
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_dest}}/: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  .yamllint  Dockerfile  README.md  dev.bash  dev.sh  pyproject.toml  setup.py
{{cookiecutter.project_dest}}/.circleci/: deploy.sh
{{cookiecutter.project_dest}}/.github/: dependabot.yml
{{cookiecutter.project_dest}}/.github/workflows/: checks.yaml  deploy.yaml  test_deploy.yaml
{{cookiecutter.project_repo}}/: .travis.yml  Dockerfile  README.md  dev.sh  setup.py  test.py
{{cookiecutter.project_repo}}/.circleci/: config.yml
{{cookiecutter.project_repo}}/bits/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.project_slug}}/: README.md
{{cookiecutter.project_slug}}/.circleci/: config.yml
{{cookiecutter.project_slug}}/hooks/: post_gen_project.py  pre_gen_project.py
