[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
license = "{{ cookiecutter.open_source_license }}"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]
readme = "README.md"
repository = "https://github.com/broadinstitute/{{ cookiecutter.project_repo }}"
homepage = "https://github.com/broadinstitute/{{ cookiecutter.project_repo }}"
keywords = []

[tool.poetry.dependencies]
python = "^3.6"  # Compatible python versions must be declared here

configparser = ">=3.5.0"
requests = "*"
toml = "^0.9"

[tool.poetry.dev-dependencies]
bump2version = "*"
coverage = ">=4.4.2"
fixtures = "*"
flake8 = "*"
green = ">=2.12.0"
mock = ">=2.0.0"
pydocstyle = "<4"
pylama = "*"
pylint = "*"
pyyaml = "*"
testtools = "*"
twine = "*"
unittest2 = ">=1.1.0"
wheel = "*"
yamllint = "*"
