[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
license = "{{ cookiecutter.open_source_license }}"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]
readme = "README.md"
repository = "https://github.com/broadinstitute/{{ cookiecutter.project_repo }}"
homepage = "https://github.com/broadinstitute/{{ cookiecutter.project_repo }}"
keywords = []

[tool.poetry.dependencies]
python = "^3.9 <3.12"  # Compatible python versions must be declared here

configparser = "^7.0.0"
requests = "^2.32.3"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
coverage = "^7.5.3"
green = "^4.0.2"
mock = "^5.1.0"
pyyaml = "^6.0.1"
testtools = "^2.7.2"

{% if cookiecutter.use_ruff== 'y' -%}
[tool.ruff]
line-length = 120

[tool.ruff.format]
# Prefer double quotes over single quotes.
quote-style = "double"

[tool.ruff.lint]
fixable = ["ALL"]
ignore = ["D104"]
select = [
  "D",   # pydocstyle
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "PL",  # Pylint
  "UP",  # pyupgrade
]

[tool.ruff.lint.pydocstyle]
convention = "google"
{% endif -%}
